namespaces/live.cloud-platform.service.justice.gov.uk/laa-ccms-staging-file-upload-api-feasibility/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-ccms-staging-file-upload-api-feasibility"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ccms-feasibility"
    cloud-platform.justice.gov.uk/application: "CCMS Staging File Upload API"
    cloud-platform.justice.gov.uk/owner: "laa-ccms-feasibility: ccmsfeasibility@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-ccms-staging-file-upload-api"
    cloud-platform.justice.gov.uk/team-name: "laa-ccms-feasibility"
    cloud-platform.justice.gov.uk/review-after: "2026-11-26"
